@@ -13,8 +13,8 @@ Buttons[]=underline
 Buttons[]=|
 Buttons[]=bullist
 Buttons[]=numlist
-#Buttons[]=indent
-#Buttons[]=outdent
+Buttons[]=indent
+Buttons[]=outdent
 Buttons[]=|
 Buttons[]=undo
 Buttons[]=redo
@@ -39,7 +39,7 @@ Buttons[]=row_after
 Buttons[]=split_cells
 Buttons[]=merge_cells
 Buttons[]=|
-#Buttons[]=code
+Buttons[]=code
 Buttons[]=fullscreen
 
 # TinyMCE plugins you want to use
